Move About Me up and fix right side text cutoff

--- a/huma-portfolio/src/components/styles/About.css
+++ b/huma-portfolio/src/components/styles/About.css
@@ -48,7 +48,7 @@
 @media only screen and (min-width: 1025px) {
   .about-section {
     width: var(--cWidth);
-    justify-content: right;
+    justify-content: center;
     max-width: 1920px;
     min-height: var(--vh);
     height: auto;
@@ -57,7 +57,6 @@
   }
   .about-me {
     padding: 0px;
-    width: 50%;
   }
   .about-me p {
     font-size: 1.9vw;
